--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: DuffyNGS
 Type: Package
 Title: Duffy Lab NGS Analysis Pipeline for RNA-seq, DNA-seq, ChIP-seq, and RIP-seq
-Version: 1.8.1
-Date: 2019-11-20
-Author: Bob Morrison <robert.morrison@nih.org>
-Maintainer: Bob Morrison <robert.morrison@nih.org>
+Version: 1.9.0
+Date: 2020-10-12
+Author: Bob Morrison <robert.morrison@nih.gov>
+Maintainer: Bob Morrison <robert.morrison@nih.gov>
 Description: A package of functions used to analyze mixed organism Next Gen Sequencing data, typically RNA-seq
 Depends: R (>= 3.5.0), DuffyTools
 Imports: DuffyTools
